--- a/timetracking-frontend/styles/utils/loading/LoadingSpinner.module.css
+++ b/timetracking-frontend/styles/utils/loading/LoadingSpinner.module.css
@@ -1,5 +1,7 @@
 .container {
     width: 100%;
     height: 100%;
-    border: 2px solid red;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
