--- a/timetracking-frontend/styles/utils/PrimaryButton.module.css
+++ b/timetracking-frontend/styles/utils/PrimaryButton.module.css
@@ -1,7 +1,11 @@
 .button {
     width: 100%;
     height: 100%;
-    padding: 4px 8px;
-    font-size: 14pt;
-    /* border: 2px solid green; */
+    padding: 10px;
+    font-size: 12pt;
+    font-weight: 600;
+    background-color: #429CD6;
+    border-radius: 7px;
+    border: none;
+    color: white;    
 }
