--- a/timetracking-frontend/styles/utils/PrimaryButton.module.css
+++ b/timetracking-frontend/styles/utils/PrimaryButton.module.css
@@ -4,8 +4,14 @@
     padding: 10px;
     font-size: 12pt;
     font-weight: 600;
-    background-color: #429CD6;
+    background-color: #E57CD7;
     border-radius: 7px;
     border: none;
     color: white;    
+    transition: background-color 0.12s ease;
+}
+
+.button:hover {
+    background-color: #564260;
+    cursor: pointer;
 }
