--- a/timetracking-frontend/styles/navbar/verticalNavbar/LinkSection.module.css
+++ b/timetracking-frontend/styles/navbar/verticalNavbar/LinkSection.module.css
@@ -8,4 +8,11 @@
 .section-header {
     color: #6C5973;
     padding-left: 8px;
+    margin-bottom: 12px;
+}
+
+.links {
+    padding: 0;
+    margin: 0;
+    list-style: none;
 }
