--- a/timetracking-frontend/styles/layouts/DefaultLayout.module.css
+++ b/timetracking-frontend/styles/layouts/DefaultLayout.module.css
@@ -1,15 +1,18 @@
 .page-container {
-    width: 100%;
-    height: 100%;
-    display: flex;
+  width: 100%;
+  height: 100%;
+  display: flex;
 }
 
 .navbar-container {
-    width: 179px;
-    height: 100%;
-    position: sticky;
+  width: 179px;
+  height: 100%;
+  position: sticky;
 }
 
 .content-container {
-    width: calc(100% - 179px);
+  position: relative;
+  width: calc(100% - 179px);
+  overflow: hidden;
+  overflow-x: hidden;
 }
