--- a/timetracking-frontend/styles/projects/ProjectPageComponent.module.css
+++ b/timetracking-frontend/styles/projects/ProjectPageComponent.module.css
@@ -14,6 +14,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  box-shadow: 0px 3px 6px rgba(100, 100, 100, 0.2);
 }
 
 .new-project-button-container {
