--- a/timetracking-frontend/styles/projects/ProjectPageComponent.module.css
+++ b/timetracking-frontend/styles/projects/ProjectPageComponent.module.css
@@ -6,7 +6,7 @@
 
 .top-bar {
   top: 0;
-  position: absolute;
+  /* position: absolute; */
   width: 100%;
   height: fit-content;
   padding: 12px 38px;
