--- a/timetracking-frontend/styles/projects/ProjectPageComponent.module.css
+++ b/timetracking-frontend/styles/projects/ProjectPageComponent.module.css
@@ -6,7 +6,7 @@
 
 .top-bar {
   top: 0;
-  /* position: absolute; */
+  margin-bottom: 16px;
   width: 100%;
   height: fit-content;
   padding: 12px 38px;
@@ -25,4 +25,10 @@
 
 .new-project-button__text {
   padding-left: 4px;
+}
+
+.projects-table {
+  width: fit-content;
+  background-color: white;
+  width: 100%;
 }
