--- a/timetracking-frontend/styles/utils/Modal.module.css
+++ b/timetracking-frontend/styles/utils/Modal.module.css
@@ -1,10 +1,23 @@
 .background {
-    position: absolute;
-    z-index: 10;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    overflow: hidden;
-    background-color: #0000005f;
+  position: absolute;
+  z-index: 10;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+  background-color: #0000005f;
+}
+
+.modal {
+  position: absolute;
+  top: 13%;
+  left: 50%;
+  transform: translate(-50%, 0);
+  border-radius: 8px;
+  width: 360px;
+  height: 550px;
+  z-index: 20;
+  background-color: white;
+  overflow: hidden;
 }
