--- a/timetracking-frontend/styles/utils/Modal.module.css
+++ b/timetracking-frontend/styles/utils/Modal.module.css
@@ -16,7 +16,7 @@
   transform: translate(-50%, 0);
   border-radius: 8px;
   width: 360px;
-  height: 550px;
+  max-height: 550px;
   z-index: 20;
   background-color: white;
   overflow: hidden;
