--- a/timetracking-frontend/styles/projects/ProjectsPageComponent.module.css
+++ b/timetracking-frontend/styles/projects/ProjectsPageComponent.module.css
@@ -32,3 +32,9 @@
   background-color: white;
   width: 100%;
 }
+
+.error-message-container {
+  width: fit-content;
+  min-width: 33%;
+  margin: auto;
+}
