--- a/timetracking-frontend/styles/projects/SingleProjectPageComponent.module.css
+++ b/timetracking-frontend/styles/projects/SingleProjectPageComponent.module.css
@@ -1,22 +1,23 @@
-.top-bar {
-    top: 0;
-    margin-bottom: 16px;
-    width: 100%;
-    height: fit-content;
-    padding: 12px 38px;
-    background-color: white;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    box-shadow: 0px 3px 6px rgba(100, 100, 100, 0.2);
-  }
-
-.new-activity-button-container {
-    width: 130px;
+.button-section {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 280px;
 }
 
-.new-activity-button-content {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+.button-text {
+  margin-left: 6px;
+}
+
+.page-content {
+  width: 100%;
+}
+
+.description-section {
+  margin: 32px;
+  font-size: 20px;
+}
+
+.activities-table {
+  width: 100%;
 }
